Fix image alignment

--- a/source/style/main.css
+++ b/source/style/main.css
@@ -34,7 +34,7 @@ a {
 }
 
 #nav-icon {
-	vertical-align:text-top;
+	display: inline-block;
 }
 
 .nav-button {
@@ -43,6 +43,8 @@ a {
 	height: 100%;
 	line-height: 48px;
 	padding: 0px 12px;
+	
+	vertical-align: top;
 }
 
 .nav-button:hover {
@@ -55,6 +57,8 @@ a {
 	height: 100%;
 	line-height: 48px;
 	padding: 0px 12px;
+		
+	vertical-align: top;
 }
 
 #content-wrapper {
